--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
         <developerConnection>scm:git:git@github.com:Anxuiz/Settings.git</developerConnection>
         <url>https://github.com/Anxuiz/Settings</url>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>repo.oc.tc</id>
+            <url>http://repo.oc.tc/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>repo.oc.tc</id>
+            <url>http://repo.oc.tc/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
