--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,33 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git@github.com:Anxuiz/Settings.git</connection>
-        <developerConnection>scm:git:git@github.com:Anxuiz/Settings.git</developerConnection>
-        <url>https://github.com/Anxuiz/Settings</url>
+        <connection>scm:git:git@github.com:OvercastNetwork/Settings.git</connection>
+        <developerConnection>scm:git:git@github.com:OvercastNetwork/Settings.git</developerConnection>
+        <url>https://github.com/OvercastNetwork/Settings</url>
     </scm>
+
+    <repositories>
+        <repository>
+            <id>pa-snapshots</id>
+            <url>https://repo.extension.ws/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>pa-releases</id>
+            <url>https://repo.extension.ws/content/repositories/releases</url>
+        </repository>
+    </repositories>
+
     <distributionManagement>
         <repository>
-            <id>overcast-deployment</id>
-            <url>https://repo.oc.tc/content/repositories/releases</url>
+            <id>pa-deployment</id>
+            <url>https://repo.extension.ws/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
-            <id>overcast-deployment</id>
-            <url>https://repo.oc.tc/content/repositories/snapshots</url>
+            <id>pa-deployment</id>
+            <url>https://repo.extension.ws/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
